change some comment